# simple-flask-docker

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  docker-push.yaml
src/python/simple_flask/: main.py
tests/docker/: conftest.py  test_docker.py
